tests/parser/stmt_parser/snapshots/r#mod__parser__stmt_parser__struct_parser__parse_simple_struct.snap
---
source: tests/parser/stmt_parser/struct_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 14,
        },
        kind: StructDecl {
            name: "Type",
            body: [],
        },
    },
]
