tests/parser/stmt_parser/snapshots/r#mod__parser__stmt_parser__struct_parser__parse_struct_with_field.snap
---
source: tests/parser/stmt_parser/struct_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 38,
        },
        kind: StructDecl {
            name: "Type",
            body: [
                ParserDeclStmt {
                    range: Range {
                        start: 18,
                        end: 36,
                    },
                    kind: StructField {
                        name: "field",
                        value_type: Some(
                            SymbolPath(
                                SymbolPath {
                                    components: [
                                        SymbolPathComponent {
                                            symbol: "Int",
                                        },
                                    ],
                                },
                            ),
                        ),
                        def_val: [
                            ExprToken {
                                range: Range {
                                    start: 35,
                                    end: 36,
                                },
                                kind: IntLiteral(
                                    0,
                                ),
                            },
                        ],
                    },
                },
            ],
        },
    },
]
